--- a/index.html
+++ b/index.html
@@ -172,74 +172,156 @@
     </section>
     <div class="container">
       <section class="vorteile">
-        <h3>IHRE VORTEILE</h3>
-        <div class="vorteile_content row">
-          <div class="col-4">Geringe Stellfläche</div>
-          <div class="col-4">Mit und ohne integrierter Freikühlung</div>
-          <div class="col-4">Für Außentemperaturen bis +55°C</div>
-          <div class="col-4">Für Außen- und Innenaufstellung erhältlich</div>
-          <div class="col-4">Betriebsbereit bei Anlieferung</div>
-          <div class="col-4">
-            Automatische Freikühlschaltung für verringerten Energieverbrauch
+        <h3 class="vorteile__title">IHRE VORTEILE</h3>
+        <div class="vorteile__content">
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/1geri.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">Geringe Stellfläche</p>
           </div>
-          <div class="col-4">Robustes Gehäuse für Außenaufstellung</div>
-          <div class="col-4">Geringe Schallemissionen</div>
-          <div class="col-4">Wetterfest und Langlebig</div>
-          <div class="col-4">Erhöhte Betriebssicherheit</div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/2mit.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Mit und ohne integrierter Freikühlung
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/3fur.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Für Außentemperaturen bis +55°C
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/4fur.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Für Außen- und Innenaufstellung erhältlich
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/5bet.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Betriebsbereit bei Anlieferung
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/6auto.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Automatische Freikühlschaltung für verringerten Energieverbrauch
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/7rob.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Robustes Gehäuse für Außenaufstellung
+            </p>
+          </div>
+          <div class="vorteile__content_list">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/8ger.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">Geringe Schallemissionen</p>
+          </div>
+          <div class="vorteile__content_list col-4">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/9wet.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">Wetterfest und Langlebig</p>
+          </div>
+          <div class="vorteile__content_list col-4">
+            <img
+              class="vorteile__content_list_icon"
+              src="/images/icons/10erh.svg"
+              alt="icon"
+            />
+            <p class="vorteile__content_list_text">
+              Erhöhte Betriebssicherheit
+            </p>
+          </div>
         </div>
       </section>
       <section class="hauptmerk">
-        <h2 class="hauptmerk_title">HAUPTMERKMALE</h2>
-        <div class="hauptmerk_content row">
-          <div class="hauptmerk_content_left col-6">
-            <ul class="hauptmerk_list">
-              <li class="hauptmerk_list_item">
+        <h2 class="hauptmerk__title">HAUPTMERKMALE</h2>
+        <div class="hauptmerk__content row">
+          <div class="hauptmerk__content_left col-6">
+            <ul class="hauptmerk__list">
+              <li class="hauptmerk__list_item">
                 ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ② Volumenströme von 1,5 m³/h bis 140 m³/h
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und
                 Hochdruckbereich
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ④ Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern,
                 Steuerungen (optional mit Reservepumpe)
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑤ Mikrochannel Verflüssiger für höchste Energieeffizienz
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑥ Mit optionalen Kompressor Schallschutzummantelungen
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑦ Schallmindernde Ventilatortechnik erhältlich
               </li>
             </ul>
           </div>
-          <div class="hauptmerk_content_right col-6">
-            <ul class="hauptmerk_list_item">
-              <li class="hauptmerk_list_item">
+          <div class="hauptmerk__content_right col-6">
+            <ul class="hauptmerk__list_item">
+              <li class="hauptmerk__list_item">
                 ⑧ Scroll, Multiscroll und Schraubenkompressoren (optional mit
                 Frequenzumrichter) erhältlich
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑨ Automatische Leistungssteuerung für Prozesse mit variabler
                 Kühllast
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑩ Kleine Kältemittelvolumen dank extrakompakter Bauweise
               </li>
-              <li class="hauptmerk-list-item">
+              <li class="hauptmerk__list_item">
                 ⑪ Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. R513a,
                 R1234ze und R290 (Propan)
               </li>
-              <li class="hauptmerk_list_item">
+              <li class="hauptmerk__list_item">
                 ⑫ Mit automatischen Glykol Nachfüllsystemem
               </li>
-              <li class="hauptmerk_list_item">⑬ Mit Remote HMI</li>
-              <li class="hauptmerk_list-_tem">
+              <li class="hauptmerk__list_item">⑬ Mit Remote HMI</li>
+              <li class="hauptmerk__list_item">
                 ⑭ Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen pro
                 Maschine
               </li>
