--- a/index.html
+++ b/index.html
@@ -273,60 +273,56 @@
       <section class="hauptmerk">
         <h2 class="hauptmerk__title">HAUPTMERKMALE</h2>
         <div class="hauptmerk__content row">
-          <div class="hauptmerk__content_left col-6">
-            <ul class="hauptmerk__list">
-              <li class="hauptmerk__list_item">
-                ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung
-              </li>
-              <li class="hauptmerk__list_item">
-                ② Volumenströme von 1,5 m³/h bis 140 m³/h
-              </li>
-              <li class="hauptmerk__list_item">
-                ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und
-                Hochdruckbereich
-              </li>
-              <li class="hauptmerk__list_item">
-                ④ Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern,
-                Steuerungen (optional mit Reservepumpe)
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑤ Mikrochannel Verflüssiger für höchste Energieeffizienz
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑥ Mit optionalen Kompressor Schallschutzummantelungen
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑦ Schallmindernde Ventilatortechnik erhältlich
-              </li>
-            </ul>
-          </div>
-          <div class="hauptmerk__content_right col-6">
-            <ul class="hauptmerk__list_item">
-              <li class="hauptmerk__list_item">
-                ⑧ Scroll, Multiscroll und Schraubenkompressoren (optional mit
-                Frequenzumrichter) erhältlich
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑨ Automatische Leistungssteuerung für Prozesse mit variabler
-                Kühllast
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑩ Kleine Kältemittelvolumen dank extrakompakter Bauweise
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑪ Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. R513a,
-                R1234ze und R290 (Propan)
-              </li>
-              <li class="hauptmerk__list_item">
-                ⑫ Mit automatischen Glykol Nachfüllsystemem
-              </li>
-              <li class="hauptmerk__list_item">⑬ Mit Remote HMI</li>
-              <li class="hauptmerk__list_item">
-                ⑭ Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen pro
-                Maschine
-              </li>
-            </ul>
-          </div>
+          <ul class="hauptmerk__content_list col-6">
+            <li class="hauptmerk__content_list_item">
+              ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ② Volumenströme von 1,5 m³/h bis 140 m³/h
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und
+              Hochdruckbereich
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ④ Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern,
+              Steuerungen (optional mit Reservepumpe)
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑤ Mikrochannel Verflüssiger für höchste Energieeffizienz
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑥ Mit optionalen Kompressor Schallschutzummantelungen
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑦ Schallmindernde Ventilatortechnik erhältlich
+            </li>
+          </ul>
+          <ul class="hauptmerk__content_list col-6">
+            <li class="hauptmerk__content_list_item">
+              ⑧ Scroll, Multiscroll und Schraubenkompressoren (optional mit
+              Frequenzumrichter) erhältlich
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑨ Automatische Leistungssteuerung für Prozesse mit variabler
+              Kühllast
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑩ Kleine Kältemittelvolumen dank extrakompakter Bauweise
+            </li>
+            <li class="hauptmerk__list_item">
+              ⑪ Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. R513a,
+              R1234ze und R290 (Propan)
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑫ Mit automatischen Glykol Nachfüllsystemem
+            </li>
+            <li class="hauptmerk__content_list_item">⑬ Mit Remote HMI</li>
+            <li class="hauptmerk__content_list_item">
+              ⑭ Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen pro
+              Maschine
+            </li>
+          </ul>
         </div>
       </section>
       <section class="bilder">
