--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             />
             <p class="vorteile__content_list_text">Geringe Schallemissionen</p>
           </div>
-          <div class="vorteile__content_list col-4">
+          <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
               src="/images/icons/9wet.svg"
@@ -258,7 +258,7 @@
             />
             <p class="vorteile__content_list_text">Wetterfest und Langlebig</p>
           </div>
-          <div class="vorteile__content_list col-4">
+          <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
               src="/images/icons/10erh.svg"
@@ -275,52 +275,123 @@
         <div class="hauptmerk__content row">
           <ul class="hauptmerk__content_list col-6">
             <li class="hauptmerk__content_list_item">
-              ① 25 verschiedene Modelle von 6 kW bis 600 kW Kühlleistung
+              ①
+              <p>
+                25 verschiedene Modelle von
+                <span class="hauptmerk__content_list_item_span">
+                  6 kW bis 600 kW</span
+                >
+                Kühlleistung
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ② Volumenströme von 1,5 m³/h bis 140 m³/h
+              ②
+              <p>
+                Volumenströme von<span class="hauptmerk__content_list_item_span"
+                  >1,5 m³/h bis 140 m³/h</span
+                >
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ③ Auswahl aus 50 verschiedenen Prozesspumpen im Hochfluss- und
-              Hochdruckbereich
+              ③
+              <p>
+                Auswahl aus
+                <span class="hauptmerk__content_list_item_span"
+                  >50 verschiedenen Prozesspumpen</span
+                >im Hochfluss- und Hochdruckbereich
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ④ Kompakteinheiten mit integrierten Pumpen, Drucktanks, Filtern,
-              Steuerungen (optional mit Reservepumpe)
+              ④
+              <p>
+                Kompakteinheiten mit
+                <span class="hauptmerk__content_list_item_span"
+                  >integrierten Pumpen, Drucktanks, Filtern, Steuerungen</span
+                >(optional mit Reservepumpe)
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑤ Mikrochannel Verflüssiger für höchste Energieeffizienz
+              ⑤
+              <p>
+                <span class="hauptmerk__content_list_item_span">
+                  Mikrochannel Verflüssiger
+                </span>
+                für höchste Energieeffizienz
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑥ Mit optionalen Kompressor Schallschutzummantelungen
+              ⑥
+              <p>Mit optionalen Kompressor Schallschutzummantelungen</p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑦ Schallmindernde Ventilatortechnik erhältlich
+              ⑦
+              <p>Schallmindernde Ventilatortechnik erhältlich</p>
             </li>
           </ul>
           <ul class="hauptmerk__content_list col-6">
             <li class="hauptmerk__content_list_item">
-              ⑧ Scroll, Multiscroll und Schraubenkompressoren (optional mit
-              Frequenzumrichter) erhältlich
+              ⑧
+              <p>
+                <span class="hauptmerk__content_list_item_span"
+                  >Scroll, Multiscroll</span
+                >und<span class="hauptmerk__content_list_item_span"
+                  >Schraubenkompressoren</span
+                >(optional mit Frequenzumrichter) erhältlich
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑨ Automatische Leistungssteuerung für Prozesse mit variabler
-              Kühllast
+              ⑨
+              <p>
+                <span class="hauptmerk__content_list_item_span">
+                  Automatische Leistungssteuerung</span
+                >für Prozesse mit variabler Kühllast
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑩ Kleine Kältemittelvolumen dank extrakompakter Bauweise
-            </li>
-            <li class="hauptmerk__list_item">
-              ⑪ Auswahl aus verschiedenen Low-GWP Kältemitteln, u.a. R513a,
-              R1234ze und R290 (Propan)
+              ⑩
+              <p>
+                <span class="hauptmerk__content_list_item_span">
+                  Kleine Kältemittelvolumen</span
+                >
+                dank extrakompakter Bauweise
+              </p>
             </li>
             <li class="hauptmerk__content_list_item">
-              ⑫ Mit automatischen Glykol Nachfüllsystemem
+              ⑪
+              <p>
+                Auswahl aus
+                <span class="hauptmerk__content_list_item_span"
+                  >verschiedenen Low-GWP Kältemitteln, u.a. R513a, R1234ze und
+                  R290 (Propan)</span
+                >
+              </p>
             </li>
-            <li class="hauptmerk__content_list_item">⑬ Mit Remote HMI</li>
             <li class="hauptmerk__content_list_item">
-              ⑭ Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen pro
-              Maschine
+              ⑫
+              <p>
+                Mit
+                <span class="hauptmerk__content_list_item_span"
+                  >automatischen Glykol Nachfüllsystemem</span
+                >
+              </p>
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑬
+              <p>
+                Mit
+                <span class="hauptmerk__content_list_item_span"
+                  >Remote HMI</span
+                >
+              </p>
+            </li>
+            <li class="hauptmerk__content_list_item">
+              ⑭
+              <p>
+                <span class="hauptmerk__content_list_item_span"
+                  >Erhöhte Betriebssicherheit mit bis zu 4 Kühlkreisläufen</span
+                >
+                pro Maschine
+              </p>
             </li>
           </ul>
         </div>
