--- a/index.html
+++ b/index.html
@@ -471,39 +471,50 @@
         </div>
       </section>
       <section class="besucher">
-        <h3 class="besucher_title">
+        <h3 class="besucher__title">
           BESUCHER DIESER SEITE SUCHTEN AUCH OFT NACH:
         </h3>
         <div class="besucher_content row">
-          <button class="col-4">GLYKOLWANNEN</button>
-          <button class="col-4">WASSERAUFBEREITUNG</button>
-          <button class="col-4">ROHRLEITUNGSBAU</button>
-          <button class="col-4">Wärmemengenmessungen</button>
-          <button class="col-4">ANLAGELEASING</button>
+          <button class="besucher_content_btn col-4">GLYKOLWANNEN</button>
+          <button class="besucher_content_btn col-4">WASSERAUFBEREITUNG</button>
+          <button class="besucher_content_btn col-4">ROHRLEITUNGSBAU</button>
+          <button class="besucher_content_btn col-4">
+            WäRMEMENGENMESSUNGEN
+          </button>
+          <button class="besucher_content_btn col-4">ANLAGELEASING</button>
         </div>
       </section>
       <section class="kontakt row">
         <div class="col-5">
-          <h3 class="kontakt_title">Jetzt Termin vereinbaren!</h3>
+          <h3 class="kontakt__title">Jetzt Termin vereinbaren!</h3>
         </div>
         <div class="col-5">
-          <p>
+          <p class="kontakt__text">
             Gerne stehen wir Ihnen für eine individuelle Beratung telefonisch
             und vor Ort zur Verfügung und freuen uns über Ihre Kontaktaufnahme.
             Sprechen Sie uns an!
           </p>
-          <p>
+          <p class="kontakt__text">
             Fragen Sie nach einem Rückruf oder kontaktieren Sie uns unter:
-            info@elsasser-technik.de
+            <a href="mailto: info@elsasser-technik.de"
+              >info@elsasser-technik.de</a
+            >
           </p>
-          <button>Kontakt</button>
+          <button class="kontakt__text_btn">
+            <img
+              class="kontakt__text_btn_arrows"
+              src="/images/icons/arrows.png"
+              alt="arrows"
+            />
+            Kontakt
+          </button>
         </div>
-        <div class="col-2">
+        <div class="kontakt__logo1 col-2">
           <img src="/images/Logo3black.png" alt="logo" class="logo" />
         </div>
       </section>
       <footer class="footer row">
-        <div class="col-3">
+        <div class="footer__adress col-3">
           Elsässer Kältetechnik Königsallee 14 40212 Düsseldorf
         </div>
         <div class="col-3">
