--- a/index.html
+++ b/index.html
@@ -514,24 +514,41 @@
         </div>
       </section>
       <footer class="footer row">
-        <div class="footer__adress col-3">
-          Elsässer Kältetechnik Königsallee 14 40212 Düsseldorf
+        <div class="col-3">
+          <h6 class="footer__title">Elsässer Kältetechnik</h6>
+          <p>Königsallee 14</p>
+          <p>40212 Düsseldorf</p>
+        </div>
+        <div class="col-4">
+          <h6 class="footer__title">Kontakt</h6>
+          <p>
+            Telefon:<a href="tel: +49021192323052">
+              <span class="footer__black"> +49 (0) 211 9232 3052</span>
+            </a>
+          </p>
+          <p>
+            E-Mail:<a href="mailto: info@elsasser-technik.de"
+              >info@elsasser-technik.de</a
+            >
+          </p>
         </div>
         <div class="col-3">
-          <h5>Kontakt</h5>
-          Telefon:<a href="tel: +49021192323052">+49 (0) 211 9232 3052</a>
-          E-Mail:<a href="mailto: info@elsasser-technik.de"
-            >info@elsasser-technik.de</a
-          >
+          <h6 class="footer__title">Shortlinks</h6>
+          <p>
+            <a href="kontakt">
+              <span class="footer__grey">Kontakt</span>
+            </a>
+          </p>
+          <p>
+            <a href="Rückruf vereinbaren">
+              <span class="footer__grey">Rückruf vereinbaren</span>
+            </a>
+          </p>
         </div>
-        <div class="col-3">
-          <h5>Shortlinks</h5>
-          <a href="kontakt">Kontakt</a>
-          <a href="Rückruf vereinbaren">Rückruf vereinbaren</a>
-        </div>
-        <div class="col-3">
-          <a href="">Impressum</a>
-          <a href="">Datenschutz</a>
+        <div class="col-2">
+          <h6 class="footer__pad"></h6>
+          <p class="footer__textdekor">Impressum</p>
+          <p class="footer__textdekor">Datenschutz</p>
         </div>
       </footer>
     </div>
