--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Kältemaschinen</title>
   </head>
   <body>
@@ -127,7 +127,7 @@
     </div>
     <section class="modern row">
       <div class="modern_left col-6">
-        <img src="/images/asv4sabu3.png" alt="foto" />
+        <img src="./images/asv4sabu3.png" alt="foto" />
       </div>
       <div class="modern__right col-6">
         <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
