--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav nav-pills">
           <li class="nav-item logo">
             <a class="nav-link header__nav_item" href="#"
-              ><img src="/images/Logo.png" alt="logo" class="logo"
+              ><img src="./images/Logo.png" alt="logo" class="logo"
             /></a>
           </li>
           <li class="nav-item header__nav">
@@ -104,7 +104,7 @@
       </header>
       <section class="energ row">
         <div class="energ-left col-7">
-          <img src="/images/Refrigeration.png" alt="Refrigeration" />
+          <img src="./images/Refrigeration.png" alt="Refrigeration" />
         </div>
         <div class="energ__right col-5">
           <h3 class="energ__right_title">ENERGIEEFFIZIENZ IM FOKUS</h3>
