--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="header__content_left_line"></div>
           </div>
           <div class="header__content_riht col-6">
-            <img src="/images/Transparent3.png" alt="Transparent3" />
+            <img src="./images/Transparent3.png" alt="Transparent3" />
           </div>
         </div>
       </header>
@@ -177,7 +177,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/1geri.svg"
+              src="./images/icons/1geri.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">Geringe Stellfläche</p>
@@ -185,7 +185,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/2mit.svg"
+              src="./images/icons/2mit.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -195,7 +195,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/3fur.svg"
+              src="./images/icons/3fur.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -205,7 +205,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/4fur.svg"
+              src="./images/icons/4fur.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -215,7 +215,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/5bet.svg"
+              src="./images/icons/5bet.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -225,7 +225,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/6auto.svg"
+              src="./images/icons/6auto.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -235,7 +235,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/7rob.svg"
+              src="./images/icons/7rob.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -245,7 +245,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/8ger.svg"
+              src="./images/icons/8ger.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">Geringe Schallemissionen</p>
@@ -253,7 +253,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/9wet.svg"
+              src="./images/icons/9wet.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">Wetterfest und Langlebig</p>
@@ -261,7 +261,7 @@
           <div class="vorteile__content_list">
             <img
               class="vorteile__content_list_icon"
-              src="/images/icons/10erh.svg"
+              src="./images/icons/10erh.svg"
               alt="icon"
             />
             <p class="vorteile__content_list_text">
@@ -415,21 +415,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="/images/asv4sabu1.png"
+                src="./images/asv4sabu1.png"
                 class="d-block w-100"
                 alt="foto"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/images/asv4sabu1.png"
+                src="./images/asv4sabu1.png"
                 class="d-block w-100"
                 alt="foto"
               />
             </div>
             <div class="carousel-item">
               <img
-                src="/images/asv4sabu1.png"
+                src="./images/asv4sabu1.png"
                 class="d-block w-100"
                 alt="foto"
               />
@@ -438,7 +438,7 @@
 
           <div class="bilder__slide_nav">
             <div class="bilder__slide_nav_btn">
-              <img src="/images/icons/Vector 12.svg" alt="icon" />
+              <img src="./images/icons/Vector 12.svg" alt="icon" />
               <a
                 class="carousel-control-prev"
                 href="#carouselExampleCaptions"
@@ -453,7 +453,7 @@
               </a>
             </div>
             <div class="bilder__slide_nav_btn">
-              <img src="/images/icons/Vector 13.svg" alt="icon" />
+              <img src="./images/icons/Vector 13.svg" alt="icon" />
               <a
                 class="carousel-control-next"
                 href="#carouselExampleCaptions"
@@ -503,14 +503,14 @@
           <button class="kontakt__text_btn">
             <img
               class="kontakt__text_btn_arrows"
-              src="/images/icons/arrows.png"
+              src="./images/icons/arrows.png"
               alt="arrows"
             />
             Kontakt
           </button>
         </div>
         <div class="kontakt__logo1 col-2">
-          <img src="/images/Logo3black.png" alt="logo" class="logo" />
+          <img src="./images/Logo3black.png" alt="logo" class="logo" />
         </div>
       </section>
       <footer class="footer row">
