--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           auch bei kleinen Nennleistungen.
         </p>
       </div>
-      <div class="spezial_right col-6"></div>
+      <div class="spezial__right col-6"></div>
     </section>
     <div class="container">
       <section class="vorteile">
