--- a/index.html
+++ b/index.html
@@ -125,51 +125,53 @@
         </div>
       </section>
     </div>
-    <section class="modern row">
-      <div class="modern_left col-6">
-        <img src="./images/asv4sabu3.png" alt="foto" />
-      </div>
-      <div class="modern__right col-6">
-        <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
-        <p class="modern__right_text">
-          Aktuelle Richtlinien und Verordnungen bezüglich des
-          <span class="modern__right_text_span">Kältemittel Phase-Downs</span>
-          müssen berücksichtigt werden. Der langfristige Einsatz des
-          Kältemittels muss sowohl nach ökonomischen als auch strategischen
-          Gesichtspunkten entschieden werden.
-        </p>
-        <p class="modern__right_text">
-          Alle unsere Kältemaschinen entsprechen dem modernsten Stand der
-          Technik und werden in den unterschiedlichsten Branchen eingesetzt.
-          Unser Angebot umfasst ein
-          <span class="modern__right_text_span"
-            >breites Sortiment an natürlichen und frigenen Kältemitteln,</span
-          >
-          die den aktuellsten Normen und Verordnungen entsprechen.
-        </p>
-      </div>
-    </section>
-    <section class="spezial row">
-      <div class="spezial__left col-6">
-        <h3 class="spezial__left_title">
-          Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
-          integrierter Freikühleinheit.
-        </h3>
-        <p class="spezial__left_text">
-          Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
-          energiesparend über ambiente Umgebungsluft.
-        </p>
-        <p class="spezial__left_text">
-          <span class="spezial__left_text_span"
-            >Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
-            Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
-            erzielt größtmögliche Kosteneinsparungen</span
-          >
-          auch bei kleinen Nennleistungen.
-        </p>
-      </div>
-      <div class="spezial__right col-6"></div>
-    </section>
+    <div class="container-fluid">
+      <section class="modern row">
+        <div class="modern_left col-6">
+          <img src="./images/asv4sabu3.png" alt="foto" />
+        </div>
+        <div class="modern__right col-6">
+          <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
+          <p class="modern__right_text">
+            Aktuelle Richtlinien und Verordnungen bezüglich des
+            <span class="modern__right_text_span">Kältemittel Phase-Downs</span>
+            müssen berücksichtigt werden. Der langfristige Einsatz des
+            Kältemittels muss sowohl nach ökonomischen als auch strategischen
+            Gesichtspunkten entschieden werden.
+          </p>
+          <p class="modern__right_text">
+            Alle unsere Kältemaschinen entsprechen dem modernsten Stand der
+            Technik und werden in den unterschiedlichsten Branchen eingesetzt.
+            Unser Angebot umfasst ein
+            <span class="modern__right_text_span"
+              >breites Sortiment an natürlichen und frigenen Kältemitteln,</span
+            >
+            die den aktuellsten Normen und Verordnungen entsprechen.
+          </p>
+        </div>
+      </section>
+      <section class="spezial row">
+        <div class="spezial__left col-6">
+          <h3 class="spezial__left_title">
+            Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
+            integrierter Freikühleinheit.
+          </h3>
+          <p class="spezial__left_text">
+            Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
+            energiesparend über ambiente Umgebungsluft.
+          </p>
+          <p class="spezial__left_text">
+            <span class="spezial__left_text_span"
+              >Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
+              Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
+              erzielt größtmögliche Kosteneinsparungen</span
+            >
+            auch bei kleinen Nennleistungen.
+          </p>
+        </div>
+        <div class="spezial__right col-6"></div>
+      </section>
+    </div>
     <div class="container">
       <section class="vorteile">
         <h3 class="vorteile__title">IHRE VORTEILE</h3>
