--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
@@ -15,98 +15,132 @@
   </head>
   <body>
     <div class="container">
-      <header class="row col-12 header">
-        <ul class="nav nav-pills">
-          <li class="nav-item logo">
-            <a class="nav-link header__nav_item" href="#"
-              ><img src="./images/Logo.png" alt="logo" class="logo"
-            /></a>
-          </li>
-          <li class="nav-item header__nav">
-            <a class="nav-link header__nav_item" href="#">Über Uns</a>
-          </li>
-          <li class="nav-item dropdown header__nav">
-            <a
-              class="nav-link dropdown-toggle header__nav_item"
-              data-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Produkte</a
-            >
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Produkte1</a>
-              <a class="dropdown-item" href="#">Produkte2</a>
-              <a class="dropdown-item" href="#">Produkte3</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown header__nav">
-            <a
-              class="nav-link dropdown-toggle header__nav_item"
-              data-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Peripherietechnik</a
-            >
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Peripherietechnik1</a>
-              <a class="dropdown-item" href="#">Peripherietechnik2</a>
-              <a class="dropdown-item" href="#">Peripherietechnik3</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown header__nav">
-            <a
-              class="nav-link dropdown-toggle header__nav_item"
-              data-toggle="dropdown"
-              href="#"
-              role="button"
-              aria-haspopup="true"
-              aria-expanded="false"
-              >Dienstleistungen</a
-            >
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Dienstleistungen1</a>
-              <a class="dropdown-item" href="#">Dienstleistungen2</a>
-              <a class="dropdown-item" href="#">Dienstleistungen3</a>
-            </div>
-          </li>
-          <li class="nav-item header__nav">
-            <a class="nav-link header__nav_item" href="#">Klimatechnik</a>
-          </li>
-          <li class="nav-item header__nav">
-            <a class="nav-link header__nav_item" href="#">Kontakt</a>
-          </li>
-          <li class="nav-item header__nav">
-            <a class="nav-link header__nav_item" href="#">Presse</a>
-          </li>
-        </ul>
-        <div class="header__content row">
-          <div class="header__content_left col-6">
+      <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand header__nav_item" href="#"
+            ><img src="../images/Logo.png" alt="logo" class="header__logo"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#"
+                  >Über Uns <span class="sr-only">(current)</span></a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Produkte
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Produkte1</a>
+                  <a class="dropdown-item" href="#">Produkte2</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Produkte</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown1"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Peripherietechnik
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Peripherietechnik1</a>
+                  <a class="dropdown-item" href="#">Peripherietechnik2</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Peripherietechnik3</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="navbarDropdown2"
+                  role="button"
+                  data-toggle="dropdown"
+                  aria-haspopup="true"
+                  aria-expanded="false"
+                >
+                  Dienstleistungen
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Dienstleistungen1</a>
+                  <a class="dropdown-item" href="#">Dienstleistungen2</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Dienstleistungen3</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Klimatechnik</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Kontakt</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Presse</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+        <div class="header__content">
+          <div class="header__content_left">
             <h1 class="header__content_left_title">
               Luftkondensierte Kältemaschinen & Kaltwassersätze
             </h1>
             <div class="header__content_left_line"></div>
-            <p class="header__content_left_text">
-              Aufgrund der kompakten Bauart werden platzsparende
-              luftkondensierte Kompressionskältemaschinen (umgangsspr.
-              „Kaltwassersätze“) vielseitig zur Prozesskühlung und
-              Gebäudeklimatisierung eingesetzt.
-            </p>
-            <div class="header__content_left_line"></div>
+            <div class="mobile_none">
+              <p class="header__content_left_text">
+                Aufgrund der kompakten Bauart werden platzsparende
+                luftkondensierte Kompressionskältemaschinen (umgangsspr.
+                „Kaltwassersätze“) vielseitig zur Prozesskühlung und
+                Gebäudeklimatisierung eingesetzt.
+              </p>
+              <div class="header__content_left_line"></div>
+            </div>
           </div>
-          <div class="header__content_riht col-6">
+          <div class="header__content_riht">
             <img src="./images/Transparent3.png" alt="Transparent3" />
+            <div class="mobile_on">
+              <p class="header__content_left_text">
+                Aufgrund der kompakten Bauart werden platzsparende
+                luftkondensierte Kompressionskältemaschinen (umgangsspr.
+                „Kaltwassersätze“) vielseitig zur Prozesskühlung und
+                Gebäudeklimatisierung eingesetzt.
+              </p>
+            </div>
           </div>
         </div>
       </header>
-      <section class="energ row">
-        <div class="energ-left col-7">
+      <section class="energ">
+        <div class="energ__left">
           <img src="./images/Refrigeration.png" alt="Refrigeration" />
         </div>
-        <div class="energ__right col-5">
+        <div class="energ__right">
           <h3 class="energ__right_title">ENERGIEEFFIZIENZ IM FOKUS</h3>
           <p class="energ__right_text">
             Bei der Anschaffung sollte deshalb besonders auf
@@ -125,53 +159,53 @@
         </div>
       </section>
     </div>
-    <div class="container-fluid">
-      <section class="modern row">
-        <div class="modern_left col-6">
-          <img src="./images/asv4sabu3.png" alt="foto" />
-        </div>
-        <div class="modern__right col-6">
-          <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
-          <p class="modern__right_text">
-            Aktuelle Richtlinien und Verordnungen bezüglich des
-            <span class="modern__right_text_span">Kältemittel Phase-Downs</span>
-            müssen berücksichtigt werden. Der langfristige Einsatz des
-            Kältemittels muss sowohl nach ökonomischen als auch strategischen
-            Gesichtspunkten entschieden werden.
-          </p>
-          <p class="modern__right_text">
-            Alle unsere Kältemaschinen entsprechen dem modernsten Stand der
-            Technik und werden in den unterschiedlichsten Branchen eingesetzt.
-            Unser Angebot umfasst ein
-            <span class="modern__right_text_span"
-              >breites Sortiment an natürlichen und frigenen Kältemitteln,</span
-            >
-            die den aktuellsten Normen und Verordnungen entsprechen.
-          </p>
-        </div>
-      </section>
-      <section class="spezial row">
-        <div class="spezial__left col-6">
-          <h3 class="spezial__left_title">
-            Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
-            integrierter Freikühleinheit.
-          </h3>
-          <p class="spezial__left_text">
-            Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
-            energiesparend über ambiente Umgebungsluft.
-          </p>
-          <p class="spezial__left_text">
-            <span class="spezial__left_text_span"
-              >Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
-              Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
-              erzielt größtmögliche Kosteneinsparungen</span
-            >
-            auch bei kleinen Nennleistungen.
-          </p>
-        </div>
-        <div class="spezial__right col-6"></div>
-      </section>
-    </div>
+    <section class="modern">
+      <div class="modern__left">
+        <img class="modern__left_img" src="./images/asv4sabu3.png" alt="foto" />
+      </div>
+      <div class="modern__right">
+        <h3 class="modern__right_title">MODERNSTE STANDARDS</h3>
+        <p class="modern__right_text">
+          Aktuelle Richtlinien und Verordnungen bezüglich des
+          <span class="modern__right_text_span">Kältemittel Phase-Downs</span>
+          müssen berücksichtigt werden. Der langfristige Einsatz des
+          Kältemittels muss sowohl nach ökonomischen als auch strategischen
+          Gesichtspunkten entschieden werden.
+        </p>
+        <p class="modern__right_text">
+          Alle unsere Kältemaschinen entsprechen dem modernsten Stand der
+          Technik und werden in den unterschiedlichsten Branchen eingesetzt.
+          Unser Angebot umfasst ein
+          <span class="modern__right_text_span"
+            >breites Sortiment an natürlichen und frigenen Kältemitteln,</span
+          >
+          die den aktuellsten Normen und Verordnungen entsprechen.
+        </p>
+      </div>
+    </section>
+    <section class="spezial">
+      <div class="spezial__left">
+        <h3 class="spezial__left_title">
+          Unsere Spezialität besteht aus unseren Kaltwassersätzen mit
+          integrierter Freikühleinheit.
+        </h3>
+        <p class="spezial__left_text">
+          Doppelkanal Mikrochannel Wärmetauscher kühlen das Prozesswasser
+          energiesparend über ambiente Umgebungsluft.
+        </p>
+        <p class="spezial__left_text">
+          <span class="spezial__left_text_span"
+            >Nur bei heißen Außentemperaturen erfolgt die Umschaltung auf
+            Kompressionskälteerzeugung. Diese Maximierung der Freikühlzeit
+            erzielt größtmögliche Kosteneinsparungen</span
+          >
+          auch bei kleinen Nennleistungen.
+        </p>
+      </div>
+      <div class="spezial__right">
+        <!-- <img class="spezial__right_img" src="./images/bg.png" alt="bg" /> -->
+      </div>
+    </section>
     <div class="container">
       <section class="vorteile">
         <h3 class="vorteile__title">IHRE VORTEILE</h3>
