--- a/index.html
+++ b/index.html
@@ -520,6 +520,9 @@
         </div>
       </section>
       <section class="kontakt">
+        <div class="kontakt__logo1 mobile_on">
+          <img src="./images/Logo3black.png" alt="logo" class="logo" />
+        </div>
         <div class="kontakt__left">
           <h3 class="kontakt__left_title">Jetzt Termin vereinbaren!</h3>
         </div>
@@ -544,7 +547,7 @@
             Kontakt
           </button>
         </div>
-        <div class="kontakt__logo1">
+        <div class="kontakt__logo1 mobile_none">
           <img src="./images/Logo3black.png" alt="logo" class="logo" />
         </div>
       </section>
